@@ -10,42 +10,41 @@ import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestControllerAdvice
 @Slf4j
 public class ErrorHandlingControllerAdvice {
 
-    @ExceptionHandler(ConstraintViolationException.class)
+    @ExceptionHandler({
+            ConstraintViolationException.class,
+            MethodArgumentNotValidException.class,
+            NotAvailableItem.class,
+            WrongDateException.class,
+            AccessDeniedException.class,
+            BookingStatusException.class
+    })
     @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ValidationErrorResponse onConstraintValidationException(ConstraintViolationException e) {
-        final List<Violation> violations = e.getConstraintViolations().stream().map(violation -> new Violation(violation.getPropertyPath().toString(), violation.getMessage())).collect(Collectors.toList());
-        return new ValidationErrorResponse(violations);
-    }
-
-
-    @ExceptionHandler(MethodArgumentNotValidException.class)
-    @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ValidationErrorResponse onMethodArgumentNotValidException(MethodArgumentNotValidException e) {
-        final List<Violation> violations = e.getBindingResult().getFieldErrors().stream().map(error -> new Violation(error.getField(), error.getDefaultMessage())).collect(Collectors.toList());
-        return new ValidationErrorResponse(violations);
+    public ErrorResponse handleBadRequestExceptions(Exception e) {
+        if (e instanceof ConstraintViolationException) {
+            ConstraintViolationException ex = (ConstraintViolationException) e;
+            final List<Violation> violations = ex.getConstraintViolations().stream()
+                    .map(violation -> new Violation(violation.getPropertyPath().toString(), violation.getMessage()))
+                    .toList();
+            return new ErrorResponse(violations.toString());
+        } else if (e instanceof MethodArgumentNotValidException) {
+            MethodArgumentNotValidException ex = (MethodArgumentNotValidException) e;
+            final List<Violation> violations = ex.getBindingResult().getFieldErrors().stream()
+                    .map(error -> new Violation(error.getField(), error.getDefaultMessage()))
+                    .toList();
+            return new ErrorResponse(violations.toString());
+        } else {
+            return new ErrorResponse(e.getMessage());
+        }
     }
 
     @ExceptionHandler(IllegalArgumentException.class)
     @ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
     public ErrorResponse handleIllegalArgumentException(IllegalArgumentException e) {
-        return new ErrorResponse(e.getMessage());
-    }
-
-    @ExceptionHandler(NotAvailableItem.class)
-    @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ErrorResponse handleNotAvailableItem(NotAvailableItem e) {
-        return new ErrorResponse(e.getMessage());
-    }
-
-    @ExceptionHandler(WrongDateException.class)
-    @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ErrorResponse handleWrongDateException(WrongDateException e) {
         return new ErrorResponse(e.getMessage());
     }
 
@@ -56,29 +55,18 @@ public class ErrorHandlingControllerAdvice {
         return new ErrorResponse(e.getMessage());
     }
 
+    @ExceptionHandler({
+            DataIntegrityViolationException.class,
+            DuplicateDataException.class
+    })
     @ResponseStatus(HttpStatus.CONFLICT)
-    @ExceptionHandler(DataIntegrityViolationException.class)
-    public ErrorResponse handleJdbcSQLIntegrityConstraintViolationException(DataIntegrityViolationException ex) {
-        log.error("Unique constraint violation: {}", ex.getMessage());
-        return new ErrorResponse("Email уже существует");
-    }
-
-    @ExceptionHandler(AccessDeniedException.class)
-    @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ErrorResponse handleAccessDeniedException(final AccessDeniedException e) {
-        return new ErrorResponse(e.getMessage());
-    }
-
-    @ExceptionHandler(DuplicateDataException.class)
-    @ResponseStatus(HttpStatus.CONFLICT)
-    public ErrorResponse handleDuplicateDataException(final DuplicateDataException e) {
-        return new ErrorResponse((e.getMessage()));
-    }
-
-    @ExceptionHandler(BookingStatusException.class)
-    @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ErrorResponse handleBookingStatusException(final BookingStatusException e) {
-        return new ErrorResponse((e.getMessage()));
+    public ErrorResponse handleConflictExceptions(Exception e) {
+        if (e instanceof DataIntegrityViolationException) {
+            log.error("Unique constraint violation: {}", e.getMessage());
+            return new ErrorResponse("Email уже существует");
+        } else {
+            return new ErrorResponse(e.getMessage());
+        }
     }
 
     @ExceptionHandler(RuntimeException.class)
